Made some styling more consistent, changed dahsboard icon, fixed a couple of errors I found, improved some readability

--- a/src/Login_folder/Login.css
+++ b/src/Login_folder/Login.css
@@ -100,6 +100,7 @@ html {
 
 .forgot-password-button:hover {
   text-decoration: underline;
+  background: none;
 }
 
 .error-message {
