--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -17,6 +17,7 @@
 .logo-container .logout-link:hover{
   background-color: #333333;
   color: #b6b4b4;
+  text-decoration: underline;
 }
 
 .navbar a {
@@ -30,7 +31,7 @@
 
 
 .navbar a:hover {
-  background-color: #ddd; /* Light grey background for hovered links */
+  background-color: #afafaf; /* Light grey background for hovered links */
   color: black; /* Changes text color for hovered links */
 }
 
